Fix cropping in Webkit

--- a/http_root/styles.css
+++ b/http_root/styles.css
@@ -112,7 +112,7 @@ p > semibold {
 }
 
 .display-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
